# EnterpriseKB

./: .env.local.example  .gitignore  README.md
backend/: .env.example  README.md  alembic.ini  check_dim.py  download_mineru.py  drop_eval.py  magic-pdf.json  pyproject.toml  test_api.py  test_llm_only.py  test_rag.py  test_startup.py
backend/alembic/: env.py
backend/app/: __init__.py  config.py  dependencies.py  main.py  main_simple.py
backend/app/core/: constants.py  permissions.py  security.py
backend/app/db/: base.py  init_db.py  session.py
backend/app/integrations/: __init__.py  llm_server.py  milvus_client.py  minio_client.py  search_engine.py
backend/app/middleware/: error_handler.py  logging.py
backend/app/models/: __init__.py  audit_log.py  chunk.py  chunk_qa_pair.py  conversation.py  department.py  document.py  message.py  qa_pair.py  role.py  user.py  user_role.py
backend/app/processors/: __init__.py  chunker.py  (+3 more)
backend/docker/: Dockerfile.backend  nginx.conf
backend/requirements/: base.txt  dev.txt  prod.txt  rag_providers.txt
backend/scripts/: check_milvus.py  init_db.py  init_milvus.py  init_milvus_simple.py
backend/tests/: demo_ocr.py  demo_ocr_full.py  demo_parser.py  demo_pdf.py  demo_pdf_full.py  generate_ground_truth.py  generate_ground_truth_v2.py  test_comparison.py  test_llm.py  test_mineru.py  test_multimodal.py  test_ocr_config.py  test_parser.py  test_parser_api.py  test_qwen_vl.py  test_rag_e2e.py  test_rag_providers.py  test_recall.py  test_recall_v2.py  test_unstructured_hi_res.py  test_unstructured_strategies.py
(+95 files in other folders)
